// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Activity Tag renders correctly for account creation 1`] = `
<DocumentFragment>
  <span
    class="Tag-sc-9e9d31f8-0 iNMWFa"
  >
    Create account
  </span>
</DocumentFragment>
`;

exports[`Activity Tag renders correctly for account update 1`] = `
<DocumentFragment>
  <span
    class="Tag-sc-9e9d31f8-0 iNMWFa"
  >
    Update account
  </span>
</DocumentFragment>
`;
